# STM32F446RE-PROJECTS

./: CMakeLists.txt  README.md  linker_script.ld
CMSIS/Include/: mpu_armv8.h
cmake/: toolchain.cmake
src/: main.c  startup.c  system_stm32f4xx.c
